--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.26.3",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
@@ -22,6 +24,7 @@
     "jwks-rsa": "^2.0.4",
     "mongoose": "^5.13.5",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
     "request": "^2.88.2",
     "twilio": "^3.66.1",
     "validator": "^13.6.0"
