--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^5.13.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
+    "read-excel-file": "^5.2.8",
     "request": "^2.88.2",
     "twilio": "^3.66.1",
     "validator": "^13.6.0"
