--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-jwt": "^6.0.0",
     "express-openid-connect": "^2.5.0",
     "helmet": "^4.6.0",
+    "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^2.0.4",
     "mongoose": "^5.13.5",
     "morgan": "^1.10.0",
